use declarative setuptools
related to #7622

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,58 @@
+[metadata]
+name = distributed
+description = Distributed scheduler for Dask
+url = https://distributed.dask.org
+project_urls =
+    Source=https://github.com/dask/distributed
+maintainer = Matthew Rocklin
+maintainer_email = mrocklin@gmail.com
+license = BSD
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: BSD License
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Topic :: Scientific/Engineering
+    Topic :: System :: Distributed Computing
+long_description = file: README.rst
+
+[options]
+python_requires = >=3.8
+include_package_data = True
+install_requires = file: requirements.txt
+packages = find:
+zip_safe = False
+
+[options.packages.find]
+exclude = *tests*
+
+[options.package_data]
+* =
+    templates/index.html
+    template.html
+distributed =
+    http/templates/*.html
+    py.typed
+
+[options.entry_points]
+console_scripts =
+    dask-ssh=distributed.cli.dask_ssh:main
+    dask-scheduler=distributed.cli.dask_scheduler:main
+    dask-worker=distributed.cli.dask_worker:main
+dask_cli =
+    scheduler=distributed.cli.dask_scheduler:main
+    worker=distributed.cli.dask_worker:main
+    ssh=distributed.cli.dask_ssh:main
+    spec=distributed.cli.dask_spec:main
+
 [flake8]
 # References:
 # https://flake8.readthedocs.io/en/latest/user/configuration.html
