--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -310,7 +310,9 @@ distributed:
       interval: 500ms
       disk: true  # Monitor host-wide disk I/O
       host-cpu: false  # Monitor host-wide CPU usage, with very granular breakdown
-      gil-contention: false  # Monitor GIL contention
+      gil: 
+        enabled: false  # Monitor GIL contention
+        interval: "1ms"  # Frequency to poll GIL
     event-loop: tornado
   rmm:
     pool-size: null
