note flake8's lack of pyproject.toml support

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,4 @@
+# flake8 doesn't support pyproject.toml yet https://github.com/PyCQA/flake8/issues/234
 [flake8]
 # References:
 # https://flake8.readthedocs.io/en/latest/user/configuration.html
