Enhanced thread safety in zict.File

--- a/continuous_integration/environment-3.10.yaml
+++ b/continuous_integration/environment-3.10.yaml
@@ -45,7 +45,8 @@ dependencies:
   - pip:
       - git+https://github.com/dask/dask
       - git+https://github.com/dask/s3fs
-      - git+https://github.com/dask/zict
+      # DO NOT MERGE
+      - git+https://github.com/crusaderky/zict@File_threadsafe
       - git+https://github.com/fsspec/filesystem_spec
       - keras
       - gilknocker>=0.3.0
