--- a/pyproject.toml
+++ b/pyproject.toml
@@ -212,3 +212,37 @@ allow_untyped_defs = true
 [tool.codespell]
 ignore-words-list = "statics"
 skip = "docs/source/changelog.rst"
+
+
+[tool.coverage.run]
+source = ["distributed"]
+omit = [
+    "distributed/tests/test*",
+    "distributed/*/tests/test*",
+    "distributed/cli/utils.py",
+    "distributed/cli/dask_spec.py",
+    "distributed/deploy/ssh.py",
+    "distributed/_version.py",
+    "distributed/pytest_resourceleaks.py",
+    "distributed/comm/ucx.py",
+]
+
+[tool.coverage.report]
+show_missing = true
+exclude_lines = [
+    # re-enable the standard pragma
+    "pragma: nocover",
+    "pragma: no cover",
+    # exclude nvml calls
+    '[\s(.]nvml[\s(.]',
+    '[\s(.]pynvml[\s(.]',
+    # exclude LOG_PDB
+    "LOG_PDB",
+    # always ignore type checking blocks
+    "TYPE_CHECKING",
+    "except ImportError",
+    "@overload",
+]
+
+[tool.coverage.html]
+directory = "coverage_html_report"
