--- a/continuous_integration/environment-3.11.yaml
+++ b/continuous_integration/environment-3.11.yaml
@@ -45,8 +45,7 @@ dependencies:
   - pip:
       - git+https://github.com/dask/dask
       - git+https://github.com/dask/s3fs
-      # DO NOT MERGE
-      - git+https://github.com/crusaderky/zict@File_threadsafe
+      - git+https://github.com/dask/zict
       - git+https://github.com/fsspec/filesystem_spec
       - keras
       - gilknocker>=0.3.0
