--- a/pyproject.toml
+++ b/pyproject.toml
@@ -133,7 +133,7 @@ filterwarnings = [
     '''ignore:Scheduler already contains a plugin with name nonidempotentplugin. overwriting:UserWarning''',
     '''ignore:Increasing number of chunks by factor of 20::dask.array.core.PerformanceWarning''',
     '''ignore::distributed.versions.VersionMismatchWarning''',
-    '''ignore:(?s)Exception in thread.*old_ssh.*channel\.send\(b"\x03"\).*Socket is closed:pytest.PytestUnhandledThreadExceptionWarning''',
+    '''ignore:(?s)Exception in thread.*old_ssh.*channel\.send\(b"\\x03"\).*Socket is closed:pytest.PytestUnhandledThreadExceptionWarning''',
     '''ignore:(?s)Exception in thread.*paramiko\.ssh_exception\.NoValidConnectionsError:pytest.PytestUnhandledThreadExceptionWarning''',
     '''ignore:(?s)Exception ignored in. <Finalize object, dead>.*sem_unlink.*FileNotFoundError:pytest.PytestUnraisableExceptionWarning''',
     '''ignore:(?s)Exception ignored in. <coroutine object Scheduler\.add_worker.*in handle_worker.*Event loop is closed:pytest.PytestUnraisableExceptionWarning''',
