--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -154,7 +154,7 @@ jobs:
         shell: bash -l {0}
         # No SIGALRM available on Windows
         if: ${{ matrix.os != 'windows-latest' }}
-        run: sed -i.bak 's/timeout_method = thread/timeout_method = signal/' setup.cfg
+        run: sed -i.bak 's/timeout_method = "thread"/timeout_method = "signal"/' pyproject.toml
 
       - name: Disable IPv6
         shell: bash -l {0}
