--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,7 +46,7 @@ repos:
     hooks:
       - id: mypy
         # Override default --ignore-missing-imports
-        # Use setup.cfg if possible instead of adding command line parameters here
+        # Use pyproject.toml if possible instead of adding command line parameters here
         args: [--warn-unused-configs]
         additional_dependencies:
           # Type stubs
