--- a/continuous_integration/recipes/dask/meta.yaml
+++ b/continuous_integration/recipes/dask/meta.yaml
@@ -29,7 +29,7 @@ requirements:
     - lz4 >=4.3.2
     - numpy >=1.21
     - pandas >=1.3
-    - bokeh >=2.4.2,<3
+    - bokeh >=2.4.2,!=3.0.*
     - jinja2 >=2.10.3
     - pyarrow >=7.0
 
