--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,7 +22,6 @@ repos:
     hooks:
       - id: black
         language_version: python3
-        exclude: versioneer.py
         args:
           - --target-version=py38
   - repo: https://github.com/pycqa/flake8
@@ -38,6 +37,8 @@ repos:
     rev: v2.2.2
     hooks:
       -   id: codespell
+          additional_dependencies:
+            - tomli
           types_or: [rst, markdown]
           files: docs
   - repo: https://github.com/pre-commit/mirrors-mypy
@@ -45,7 +46,7 @@ repos:
     hooks:
       - id: mypy
         # Override default --ignore-missing-imports
-        # Use setup.cfg if possible instead of adding command line parameters here
+        # Use pyproject.toml if possible instead of adding command line parameters here
         args: [--warn-unused-configs]
         additional_dependencies:
           # Type stubs
