--- a/continuous_integration/recipes/distributed/meta.yaml
+++ b/continuous_integration/recipes/distributed/meta.yaml
@@ -27,6 +27,8 @@ requirements:
     - python >=3.8
     - pip
     - dask-core {{ dask_version }}
+    - versioneer =0.28
+    - tomli # [py<311]
   run:
     - python >=3.8
     - click >=8.0
