--- a/continuous_integration/environment-3.8.yaml
+++ b/continuous_integration/environment-3.8.yaml
@@ -27,6 +27,7 @@ dependencies:
   - psutil
   - pyarrow=7
   - pynvml  # Only tested here
+  - pytables
   - pytest
   - pytest-cov
   - pytest-faulthandler
