Pin to dask 2023.3.2 in CI envs

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,5 +62,5 @@ repos:
           - pytest
           - tornado
           - pyarrow
-          - git+https://github.com/dask/dask
+          - git+https://github.com/dask/dask@2023.3.2
           - git+https://github.com/dask/zict
