--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,7 +2,7 @@ numpydoc
 tornado
 toolz
 cloudpickle
-git+https://github.com/dask/dask
+git+https://github.com/dask/dask@2023.3.2
 sphinx
 dask-sphinx-theme>=3.0.0
 sphinx-click
