--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Build conda packages
         run: |
           # suffix for pre-release package versions
-          export VERSION_SUFFIX=a`date +%y%m%d`
+          export VERSION_SUFFIX=`date +%y%m%d`
 
           # conda search for the latest dask-core pre-release
           arr=($(conda search --override-channels -c dask/label/dev dask-core | tail -n 1))
@@ -55,7 +55,7 @@ jobs:
 
           # distributed pre-release build
           conda mambabuild continuous_integration/recipes/distributed \
-                           --channel dask/label/dev \
+                           --channel /home/nfs/charlesb/dev/dask/nightly-version-fix/ \
                            --no-anaconda-upload \
                            --output-folder .
 
