--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -217,7 +217,11 @@ distributed:
       delay:
          min: 1s  # the first non-zero delay between re-tries
          max: 20s  # the maximum delay between re-tries
-    compression: auto
+    compression:
+      remote-client: auto  # Client connecting to a scheduler or worker on another host
+      remote-worker: false  # Peer-to-peer worker comms across the network
+      localhost: false  # All network comms on the same host (e.g. on a LocalCluster)
+      spill: auto  # Spill to disk
     shard: 64MiB
     offload: 10MiB # Size after which we choose to offload serialization to another thread
     default-scheme: tcp
