add --cov-config=pyproject.toml so config is always correctly loaded by pytest-cov

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,6 +105,7 @@ addopts = '''
 --ignore=.github
 --strict-markers
 --strict-config
+--cov-config=pyproject.toml
 -p no:asyncio
 -p no:legacypath'''
 filterwarnings = [
