set [tool.setuptools] package-dir to force setuptools editables to append to sys.path

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ dask-worker = "distributed.cli.dask_worker:main"
 [tool.setuptools]
 include-package-data = true
 zip-safe = false
+package-dir = {"" = "."}
 
 [tool.setuptools.packages.find]
 exclude = ["*tests*"]
