--- a/continuous_integration/environment-3.9.yaml
+++ b/continuous_integration/environment-3.9.yaml
@@ -12,6 +12,7 @@ dependencies:
   - click
   - cloudpickle
   - coverage
+  - cython  # Only tested here; also a dependency of crick
   - dask  # overridden by git tip below
   - filesystem-spec
   - gilknocker>=0.4.0
@@ -50,4 +51,5 @@ dependencies:
   - zstandard >=0.9.0
   - pip:
       - git+https://github.com/dask/dask
+      - git+https://github.com/dask/crick  # Only tested here
       - keras
