--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -27,7 +27,7 @@ distributed:
     pickle: True            # Is the scheduler allowed to deserialize arbitrary bytestrings
     preload: []             # Run custom modules with Scheduler
     preload-argv: []        # See https://docs.dask.org/en/latest/how-to/customize-initialization.html
-    resolve-worker-hostname: True # Whether or not the worker hostname is resolved to an IP address at connection time
+    resolve-worker-hostname: False # Whether or not the worker hostname is resolved to an IP address at connection time
     unknown-task-duration: 500ms  # Default duration for all tasks with unknown durations ("15m", "2h")
     default-task-durations:  # How long we expect function names to run ("1h", "1s") (helps for long tasks)
       rechunk-split: 1us
