--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,7 +30,7 @@ jobs:
         extra_packages: [null]
         # Cherry-pick test modules to split the overall runtime roughly in half
         # partition: [ci1, not ci1]
-        partition: [ci1]
+        partition: [not ci1]
         exclude:
           - os: macos-latest
             environment: "3.9"
