--- a/continuous_integration/environment-3.9.yaml
+++ b/continuous_integration/environment-3.9.yaml
@@ -50,6 +50,6 @@ dependencies:
   - zict
   - zstandard >=0.9.0
   - pip:
-      - git+https://github.com/dask/dask
+      - git+https://github.com/hendrikmakait/dask@fda24bd476860e660602788e85b4eade5a863966
       - git+https://github.com/dask/crick  # Only tested here
       - keras
