--- a/continuous_integration/environment-mindeps.yaml
+++ b/continuous_integration/environment-mindeps.yaml
@@ -22,8 +22,7 @@ dependencies:
   # Distributed depends on the latest version of Dask
   - pip
   - pip:
-    # - git+https://github.com/dask/dask
-    - git+https://github.com/hendrikmakait/dask.git@default-shuffle-ignores-fuse
+    - git+https://github.com/dask/dask
   # test dependencies
   - pytest
   - pytest-cov
