Change dask repo [revert-me]

--- a/continuous_integration/environment-3.10.yaml
+++ b/continuous_integration/environment-3.10.yaml
@@ -43,7 +43,8 @@ dependencies:
   - zict  # overridden by git tip below
   - zstandard >=0.9.0
   - pip:
-      - git+https://github.com/dask/dask
+      # - git+https://github.com/dask/dask
+      - git+https://github.com/hendrikmakait/dask@d4a288cf4a00b04b2333d973b37a0e270784b807
       - git+https://github.com/dask/s3fs
       - git+https://github.com/dask/zict
       - git+https://github.com/fsspec/filesystem_spec
