--- a/continuous_integration/environment-3.9.yaml
+++ b/continuous_integration/environment-3.9.yaml
@@ -50,6 +50,7 @@ dependencies:
   - zict
   - zstandard >=0.9.0
   - pip:
-      - git+https://github.com/dask/dask
+      # - git+https://github.com/dask/dask
+      - git+https://github.com/hendrikmakait/dask@d4a288cf4a00b04b2333d973b37a0e270784b807
       - git+https://github.com/dask/crick  # Only tested here
       - keras
