--- a/continuous_integration/environment-3.11.yaml
+++ b/continuous_integration/environment-3.11.yaml
@@ -43,7 +43,7 @@ dependencies:
   - zict  # overridden by git tip below
   - zstandard >=0.9.0
   - pip:
-      - git+https://github.com/dask/dask@j-bennet/10340-annotations-leak # TODO: revert
+      - git+https://github.com/j-bennet/dask@j-bennet/10340-annotations-leak # TODO: revert
       - git+https://github.com/dask/s3fs
       - git+https://github.com/dask/zict
       - git+https://github.com/fsspec/filesystem_spec
