--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -58,7 +58,7 @@ repos:
           - types-psutil
           - types-setuptools
           # Typed libraries
-          - click
+          - click!=8.1.4
           - numpy
           - pytest
           - tornado
