--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -55,6 +55,10 @@ jobs:
             environment: mindeps
             extra_packages: [numpy]
             partition: "not ci1"
+          - os: ubuntu-latest
+            environment: mindeps
+            extra_packages: [memray]
+            partition: "extra_packages"
 
         # Uncomment to stress-test the test suite for random failures.
         # Must also change `export TEST_ID` in first step below.
@@ -106,7 +110,7 @@ jobs:
         if: |
           (
             steps.skip-caching.outputs.trigger-found != 'true'
-            && !(github.event_name == 'pull_request' 
+            && !(github.event_name == 'pull_request'
                  && contains(github.event.pull_request.labels.*.name, 'skip-caching'))
           )
         id: get-date
@@ -128,8 +132,8 @@ jobs:
         run: mamba env update -n dask-distributed -f ${{ env.CONDA_FILE }}
         if: |
           (
-            steps.skip-caching.outputs.trigger-found == 'true' 
-            || (github.event_name == 'pull_request' 
+            steps.skip-caching.outputs.trigger-found == 'true'
+            || (github.event_name == 'pull_request'
                 && contains(github.event.pull_request.labels.*.name, 'skip-caching'))
             || steps.cache.outputs.cache-hit != 'true'
           )
