--- a/pyproject.toml
+++ b/pyproject.toml
@@ -145,6 +145,7 @@ filterwarnings = [
 minversion = "6"
 markers = [
     "ci1: marks tests as belonging to 1 out of 2 partitions to run on CI ('-m \"not ci1\"' for second partition)",
+    "extra_packages: marks tests that require a special dependency to run.",
     "slow: marks tests as slow (deselected by default", # select with '--runslow')
     "avoid_ci: marks tests as flaky or broken on CI on all OSs",
     "ipython: marks tests as exercising IPython",
