Make p2p-specific comms configurable

--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -287,6 +287,14 @@ distributed:
     erred-tasks:
       max-history: 100
 
+  p2p:
+    comm:
+      retry:
+        count: 10
+        delay:
+          min: 1s  # the first non-zero delay between re-tries
+          max: 20s  # the maximum delay between re-tries
+
   ###################
   # Bokeh dashboard #
   ###################
