--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -66,6 +66,6 @@ repos:
           - git+https://github.com/dask/dask
           - git+https://github.com/dask/zict
 
-# Increase this value to clear the cache on GitHub actions
-# if nothing else in this file has changed:
+# Increase this value to clear the cache on GitHub actions if nothing else in this file
+# has changed. See also same variable in .github/workflows/test.yaml
 # CACHE_NUMBER: 0
