Skip rechunker in code samples

--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -282,6 +282,7 @@ distributed:
         - cudf
         - cuml
         - prefect
+        - rechunker
         - xarray
         - xgboost
     erred-tasks:
