--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -275,6 +275,7 @@ distributed:
       nframes: 0
       ignore-modules:
         - asyncio
+        - datashader
         - functools
         - dask
         - distributed
@@ -282,6 +283,7 @@ distributed:
         - cudf
         - cuml
         - prefect
+        - pytest
         - rechunker
         - xarray
         - xgboost
