--- a/distributed/distributed.yaml
+++ b/distributed/distributed.yaml
@@ -273,15 +273,27 @@ distributed:
       ignore-modules:
         - asyncio
         - functools
+        - datashader
         - dask
+        - debugpy
         - distributed
         - coiled
         - cudf
         - cuml
+        - pluggy  # part of pytest
         - prefect
         - rechunker
         - xarray
         - xgboost
+      ignore-files:
+        - runpy\.py  # `python -m pytest` (or other module) shell command
+        - pytest  # `pytest` shell command
+        - py\.test  # `py.test` shell command
+        - pytest-script\.py  # `pytest` shell command in Windows
+        - _pytest  # pytest implementation
+        - pycharm  # Run pytest from PyCharm GUI
+        - vscode_pytest
+        - get_output_via_markers\.py
     erred-tasks:
       max-history: 100
 
