--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        environment: [mindeps, "3.9", "3.10", "3.11"]
+        environment: [mindeps, "3.9", "3.10", "3.11", "3.12"]
         queuing: [queue]
         extra_packages: [null]
         # Cherry-pick test modules to split the overall runtime roughly in half
@@ -86,6 +86,10 @@ jobs:
         uses: actions/checkout@v4.1.0
         with:
           fetch-depth: 0
+
+      - name: Set AIOHTTP_NO_EXTENSIONS=1 on 3.12
+        if: matrix.environment == '3.12'
+        run: echo AIOHTTP_NO_EXTENSIONS=1 >> $GITHUB_ENV
 
       - name: Setup Conda Environment
         uses: conda-incubator/setup-miniconda@v2.2.0
