install bokeh on 3.12

--- a/continuous_integration/environment-3.12.yaml
+++ b/continuous_integration/environment-3.12.yaml
@@ -8,7 +8,7 @@ dependencies:
   - packaging
   - pip
   - asyncssh
-  # - bokeh  depends on pillow with no support for 3.12
+  - bokeh
   - click
   - cloudpickle
   - coverage
